# hackai_230351

./: README.md  pyproject.toml
hack_ai_resume_bot/src/: job_helper_client.py  main.py
hack_ai_resume_bot/src/agents/: schedule_reminder.py
hack_ai_resume_bot/src/agents/central_agent/: central_agent.py
hack_ai_resume_bot/src/agents/job_title_recommendation/: job_title_recommendation.py  wordvec.joblib
hack_ai_resume_bot/src/agents/resume_compare/: resume_compare.py  test.py
hack_ai_resume_bot/src/agents/schedule_reminder/: schedule_reminder.py
hack_ai_resume_bot/src/messages/: __init__.py  central_message.py  compare.py  general.py  job_title.py  schedule.py
